--- a/org.eclipse.scout.rt.ui.rap.theme.rayo/theme/scout.css
+++ b/org.eclipse.scout.rt.ui.rap.theme.rayo/theme/scout.css
@@ -1047,7 +1047,6 @@ CLabel:disabled {
   background-color: transparent;
   background-image: none;
   border: none;
-  padding: 3px;
   cursor: default;
   opacity: 1;
 }
